--- a/Swipe/index.css
+++ b/Swipe/index.css
@@ -37,7 +37,7 @@
 }
 
 body {
-  background-color: var(--purple-1);
+  background-color: var(--bg-light);
   font-family: var(--body-font);
   color: var(--text-dark);
   width: 100%;
@@ -121,6 +121,41 @@ p {
   margin: var(--spacing-md) 0;
 }
 
+.section-container {
+  width: 100%;
+  max-width: var(--standard-width);
+}
+
+/* LAYOUT STYLES */
+.two-column {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+
+.two-column > .col-left {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 var(--spacing-md) 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.two-column > .col-right {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 0 0 var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
 .subtitle,
 .subtitle2 {
   color: var(--purple-1);
@@ -197,6 +232,7 @@ p {
   align-items: center;
   width: 100%;
   max-width: var(--standard-width);
+  padding: 0 var(--spacing-md);
 }
 
 .menu {
@@ -209,6 +245,11 @@ p {
 .menu a {
   color: var(--text-light);
   margin: 0 var(--spacing-md);
+  font-weight: bold;
+}
+
+.menu a:hover {
+  text-decoration: underline;
 }
 
 .navbar-button {
@@ -217,4 +258,15 @@ p {
 
 .navbar-button:hover {
   background: rgba(250, 250, 250, 0.5);
+}
+
+/* HERO STYLES*/
+.button-container {
+  display: flex;
+  margin: var(--spacing-md) 0;
+}
+
+.button-container button:nth-of-type(2) {
+  margin: 0 0 0 var(--spacing-md);
+  color: var(--purple-2);
 }
